# bot-discordd

./: .env.example  LICENSE  Makefile  README.md  docker-compose.yml  push.ps1  push.sh  start.ps1  start.sh  stop.ps1  stop.sh  test_api.py
frontend/: .env  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  index.css
infrastructure/: cloudflared-config.yml
news-server/: .env.example  .gitignore  config.py  docker-compose.yml  pyproject.toml  requirements.txt
news-server/app/: main.py
news-server/app/api/v1/: router.py
news-server/app/api/v1/endpoints/: ai.py  analytics.py  news.py  search.py  sources.py  stock.py  translate.py  websocket.py
news-server/app/core/: config.py  exceptions.py  logging.py
news-server/app/db/: __init__.py  session.py
news-server/app/forex/: __init__.py  charts.py  indicators.py  models.py  router.py  schemas.py  service.py  tiingo_client.py  websocket.py
news-server/app/models/: __init__.py
news-server/app/schemas/: __init__.py
news-server/app/stock/: __init__.py  events.py  router.py  ws_manager.py
news-server/app/websocket/: __init__.py  events.py  manager.py
news-server/docs/: DISCORD_BOT_INTEGRATION.md  FOREX_SERVICE_API.md
news-server/infrastructure/docker/: Dockerfile.api  Dockerfile.worker
news-server/workers/: celery_app.py
news-server/workers/ai/: entity_extractor.py  impact_analyzer.py  processor.py  sentiment_analyzer.py  summarizer.py  translator.py
news-server/workers/ai/providers/: __init__.py  base.py  factory.py  gemini_provider.py  groq_provider.py  openrouter_provider.py
news-server/workers/collectors/: calendar_collector.py  rss_collector.py  stock_id_collector.py
news-server/workers/scrapers/: generic_scraper.py
news-server/workers/tasks/: ai_tasks.py  broadcast_tasks.py  calendar_tasks.py  collection_tasks.py  maintenance_tasks.py  scraping_tasks.py  stock_tasks.py  websocket_tasks.py
tests/: test_news.py
wr-bot/: .env.example  Cargo.toml
wr-bot/lavalink/: application.yml
(+50 files in other folders)
